# ChangeLog for x11-apps/iceauth
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.61 2011/07/29 10:31:10 xarthisius Exp $

  29 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> iceauth-1.0.5.ebuild:
  ppc64 stable wrt #371857

  13 Jul 2011; Markus Meier <maekke@gentoo.org> iceauth-1.0.5.ebuild:
  x86 stable, bug #371857

  28 Jun 2011; Brent Baude <ranger@gentoo.org> iceauth-1.0.5.ebuild:
  Marking iceauth-1.0.5 ppc stable for bug 371857

  26 Jun 2011; Markus Meier <maekke@gentoo.org> iceauth-1.0.5.ebuild:
  arm stable, bug #371857

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> iceauth-1.0.5.ebuild:
  Stable on amd64 wrt bug #372333

*iceauth-1.0.5 (24 May 2011)

  24 May 2011; Tomáš Chvátal <scarabeus@gentoo.org> +iceauth-1.0.5.ebuild:
  Version bump to the 1.0.5.

  14 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -iceauth-1.0.3.ebuild:
  old

  14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> iceauth-1.0.4.ebuild:
  ppc stable wrt #344827, #354237

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> iceauth-1.0.4.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #344827

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> iceauth-1.0.4.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> iceauth-1.0.4.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org> iceauth-1.0.4.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> iceauth-1.0.4.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> iceauth-1.0.4.ebuild:
  ppc64 stable wrt #344827

*iceauth-1.0.4 (31 Oct 2010)

  31 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org> +iceauth-1.0.4.ebuild:
  Version bump

  10 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -iceauth-1.0.2.ebuild:
  rm

  19 Jan 2010; Raúl Porcel <armin76@gentoo.org> iceauth-1.0.3.ebuild:
  s390 stable wrt #294958
