@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xauth
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xauth/ChangeLog,v 1.75 2011/07/29 10:39:11 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xauth/ChangeLog,v 1.76 2011/07/30 10:34:30 armin76 Exp $
+
+  30 Jul 2011; Raúl Porcel <armin76@gentoo.org> xauth-1.0.6.ebuild:
+  alpha/ia64/s390/sh/sparc stable wrt #371857
 
   29 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> xauth-1.0.6.ebuild:
   ppc64 stable wrt #371857
