@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/iceauth
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.61 2011/07/29 10:31:10 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.62 2011/07/30 10:33:03 armin76 Exp $
+
+  30 Jul 2011; Raúl Porcel <armin76@gentoo.org> iceauth-1.0.5.ebuild:
+  alpha/ia64/s390/sh/sparc stable wrt #371857
 
   29 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> iceauth-1.0.5.ebuild:
   ppc64 stable wrt #371857
